# legacygym

./: .env.example  .gitignore  AGENTS.md  Dockerfile  HACKATHON_REQUIREMENTS.md  README.md  __init__.py  client.py  cobol-code-sample-review.json  desktop.ini  inference.py  models.py  openenv.yaml  pyproject.toml  rosetta-code-task-comparisons.json
server/: Dockerfile  __init__.py  app.py  environment.py  legacygym_environment.py  state.py  task_registry.py
server/execution/: __init__.py  runner.py
server/graders/: __init__.py  base.py  code_grader.py  reward.py
server/tasks/: __init__.py  align_columns.py  array_length.py  automatic_abbreviations.py  base.py  cobol_review_programs.py  dataset.py  levenshtein_distance.py  tokenize_with_escaping.py  word_frequency.py
tests/: test_dataset_loader.py  test_environment.py  test_graders.py  test_inference.py  test_reward_adapter.py  test_runner.py
