# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.
#
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-legacygym"
version = "0.1.0"
description = "OpenEnv COBOL-to-Python modernization benchmark"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "openenv-core[core]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
server = "legacygym.server.app:main"

[tool.setuptools]
include-package-data = true
packages = [
    "legacygym",
    "legacygym.server",
    "legacygym.server.execution",
    "legacygym.server.graders",
    "legacygym.server.tasks",
]
package-dir = { "legacygym" = ".", "legacygym.server" = "server" }
